--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,4 @@ torch==2.6.0
 accelerate>=0.26.0
 gunicorn==23.0.0
 uvicorn==0.34.0
-git+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz#egg=en_core_web_sm-2.2.0
+git+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz
